# scientific-abstract-classification

./: .gitignore  README.md  main.py  pyproject.toml
app/: routes.py  startup.py
app/pages/: data_explore.py  data_processing.py  data_sampling.py  home.py  live_predict.py  model_experiments.py  model_experiments_temp.py
app/services/: dataset_service.py
app/states/: app_state.py
configs/: config.yaml
data/: arxiv_test_untouched.csv  arxiv_train_augmented.csv
scripts/: download_data.py
src/config/: appsettings.py  configuration_manager.py
src/models/: adaboost_classifier.py  classifier_base.py  decision_tree_classifier.py  gaussian_nb_classifier.py  kmeans_classifier.py  knn_classifier.py  random_forest_classifier.py  stacking_classifier.py
src/preprocessing/: back_translation.py  dataset.py  dataset_loader.py  embedding_vectorizer.py  faiss_cache.py
src/utils/: logging_utils.py  plot_metrics.py  randomness_utils.py
src/vectorizers/: bagofword_text_vectorizer.py  text_vectorizer_base.py  tfidf_text_vectorizer.py  wordembedding_encoder.py
