[project]
name = "scientific-abstract-classification"
version = "0.1.0"
description = "Smart topic classification for scientific abstracts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.47.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "nltk",
    "imbalanced-learn",
    "faiss-cpu>=1.7.4",
    "xgboost>=3.0.4",
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "googletrans>=4.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
